# Keel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODEBASE_ARCHITECTURE_AUDIT.md  DATA.md  DECISIONS.md  DESIGN.md  Dockerfile.api  Dockerfile.mlflow  Dockerfile.worker  ENGINEERING_RULES.md  EVALS.md  EXPLAIN.md  KEEL_BRIEF.md  LICENSE  PLAN.md  PLANNER.md  README.md  RUNBOOK.md  SECURITY.md  SPEC.md  STRETCH.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
data/: grad_risk.csv  grad_risk_golden_edge.csv  grad_risk_meta.json  grad_risk_test.csv  hand_labeled_slice.csv  intent-split.json  intent_dataset.csv  intent_golden.csv
data/rag-corpus/: northane_catalog.md  northane_policies.md  summit_catalog.md  summit_policies.md
docs/: ARCH.md  ARCHITECTURE.md  DATA.md  DECISIONS.md  DEMO.md  DESIGN.md  ENGINE.md  ENGINEERING_RULES.md  EVALS.md  OVERVIEW.md  PLAN.md  PRODUCTION.md  README.md  SECURITY.md  SPEC.md  STRETCH.md
docs/history/: PLAN.md
docs/reference/: ENGINEERING_RULES.md
frontend/: package-lock.json  package.json
frontend/admin/: index.html  package.json
frontend/platform/: index.html  package.json
frontend/portal/: Dockerfile  index.html  package.json  vite.config.ts
frontend/ui/: package.json
frontend/widget/: index.html  package.json
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_phase2.py  0003_phase3.py  0004_phase4.py  0005_phase5.py  0006_platform_operator.py  0007_fix_users_rls_for_operators.py  0008_platform_count_functions.py  0009_widget_config_all.py  0010_institutional_action_types.py  0011_definer_functions_bypassrls.py  0012_drop_portal_definer_functions.py  0013_section_instructor.py  0014_waitlist_notified_at.py  0015_grad_plan_active_index.py
model-server/: .dockerignore  Dockerfile  README.md  pyproject.toml
model-server/src/model_server/: config.py  main.py
model-server/tests/: test_health.py
scripts/: db-init.sh  generate_grad_risk_data.py  generate_intent_dataset.py  pull_model_artifacts.py  seed.py
specs/001-phase-0-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase-1-Intent-classifier/: plan.md  spec.md
specs/003-phase-1-grad-risk-classifier/: plan.md  spec.md
specs/004-phase-1-engine/: plan.md  spec.md  tasks.md
specs/005-phase-2-agent-rag-rails/: plan.md  spec.md  tasks.md
specs/006-phase-3-tools-actions-worker/: plan.md  spec.md  tasks.md
tests/: conftest.py
training/: train_grad_risk.ipynb  train_intent_classifier.ipynb
(+189 files in other folders)
